cabal-version:      2.4
name:               bookit
version:            0.1.0.0
synopsis:           Produce HTML from markup.
description:
  This is a document processor for the "Rendering Vector Graphics" project.

license:            BSD-3-Clause
author:             Jonathan Merritt
maintainer:         j.s.merritt@gmail.com
copyright:          Copyright (C) Jonathan Merritt 2021
category:           Documentation
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/lancelet/rendering-vector-graphics.git

common base
  default-language: Haskell2010
  build-depends:    base ^>=4.14.0.0

common ghc-options
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints

executable bookit
  import:           base, ghc-options
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010

test-suite bookit-test
  import:         base
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Test.hs
  other-modules:
    Bookit.Sexp.CharTest
    Bookit.Sexp.ParseTest
    Bookit.Sexp.TypesTest

  build-depends:
    , bookit
    , doctest
    , hedgehog
    , megaparsec
    , text

library
  import:          base, ghc-options
  hs-source-dirs:  src
  other-modules:
  exposed-modules:
    Bookit.Sexp
    Bookit.Sexp.Char
    Bookit.Sexp.Parse
    Bookit.Sexp.Ppr
    Bookit.Sexp.Types

  build-depends:
    , containers
    , megaparsec
    , text
